ToString으로 객체 정보를 편하게 보기

--- a/src/main/resources/templates/question_list.html
+++ b/src/main/resources/templates/question_list.html
@@ -1,1 +1,28 @@
-<h2>질문 리스트</h2>
+[[${questionList}]]
+
+<table border="1">
+    <colgroup>
+        <col width="60px">
+        <col width="250px">
+        <col width="250px">
+    </colgroup>
+    <thead>
+    <tr>
+        <th>번호</th>
+        <th>제목</th>
+        <th>작성날짜</th>
+    </tr>
+    </thead>
+    <tbody>
+    <tr>
+        <td>2</td>
+        <td>스프링부트 모델 질문입니다.</td>
+        <td>2024-12-27 22:47:53.030657</td>
+    </tr>
+    <tr>
+        <td>1</td>
+        <td>sbb가 무엇인가요?</td>
+        <td>2024-12-27 22:47:53.028658</td>
+    </tr>
+    </tbody>
+</table>
