--- a/src/main/resources/templates/question_list.html
+++ b/src/main/resources/templates/question_list.html
@@ -1,5 +1,3 @@
-[[${questionList}]]
-
 <table border="1">
     <colgroup>
         <col width="60px">
@@ -10,19 +8,14 @@
     <tr>
         <th>번호</th>
         <th>제목</th>
-        <th>작성날짜</th>
+        <th>작성일시</th>
     </tr>
     </thead>
     <tbody>
-    <tr>
-        <td>2</td>
-        <td>스프링부트 모델 질문입니다.</td>
-        <td>2024-12-27 22:47:53.030657</td>
-    </tr>
-    <tr>
-        <td>1</td>
-        <td>sbb가 무엇인가요?</td>
-        <td>2024-12-27 22:47:53.028658</td>
+    <tr th:each="q : ${questionList}">
+        <td th:text="${q.id}"></td>
+        <td th:text="${q.subject}"></td>
+        <td th:text="${q.createDate}"></td>
     </tr>
     </tbody>
 </table>
