--- a/src/main/resources/templates/question_detail.html
+++ b/src/main/resources/templates/question_detail.html
@@ -1,4 +1,7 @@
 <h1>
-    <span th:text="${id}"></span>번 
+    <span th:text="${id}"></span>번
     질문 상세 내용
 </h1>
+
+<h1 th:text="${question.subject}"></h1>
+<div th:text="${question.content}"></div>
