--- a/src/main/resources/templates/question_detail.html
+++ b/src/main/resources/templates/question_detail.html
@@ -1,3 +1,5 @@
+<link rel="stylesheet" href="text/css" th:href="@{/style.css}">
+
 <h1>
     <span th:text="${id}"></span>번
     질문 상세 내용
@@ -8,10 +10,6 @@
 
 <!-- #lists.size(리스트) : List의 size() 함수와 같다. -->
 <h5 th:text="|${#lists.size(question.answerList)}개의 답변이 있습니다.|"></h5>
-<h5>
-    <span th:text="${#lists.size(question.answerList)}"></span>
-    개의 답변이 있습니다.
-</h5>
 
 <div>
     <ul>
