--- a/src/main/resources/templates/question_list.html
+++ b/src/main/resources/templates/question_list.html
@@ -1,42 +1,38 @@
-<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/bootstrap/5.3.3/css/bootstrap.min.css">
+<link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css">
 
 <style>
     @font-face {
-    font-family: 'GmarketSansMedium';
-    src: url('https://fastly.jsdelivr.net/gh/projectnoonnu/noonfonts_2001@1.1/GmarketSansMedium.woff') format('woff');
-    font-weight: normal;
-    font-style: normal;
-}
+      font-family: 'GmarketSansMedium';
+      src: url('https://fastly.jsdelivr.net/gh/projectnoonnu/noonfonts_2001@1.1/GmarketSansMedium.woff') format('woff');
+      font-weight: normal;
+      font-style: normal;
+    }
+
     html > body {
-    font-family: 'GmarketSansMedium';
-    text-underline-position: under;
-}
+      font-family: 'GmarketSansMedium';
+      text-underline-position: under;
+    }
 </style>
 
-<h1>질문 리스트</h1>
-
-<table border="1">
-    <colgroup>
-        <col width="60px">
-        <col width="250px">
-        <col width="250px">
-    </colgroup>
-    <thead>
-    <tr>
-        <th>번호</th>
-        <th>제목</th>
-        <th>작성일시</th>
-    </tr>
-    </thead>
-    <tbody>
-    <tr th:each="q : ${questionList}">
-        <td th:text="${q.id}"></td>
-        <td>
-            <a th:href="@{|/question/detail/${q.id}|}" th:text="${q.subject}"></a>
-        </td>
-        <td>
-            <a th:href="@{|/question/detail/${q.createDate}|}" th:text="${q.createDate}"></a>
-        </td>
-    </tr>
-    </tbody>
-</table>
+<div class="container my-3">
+    <table class="table">
+        <thead class="table-dark">
+        <tr>
+            <th>번호</th>
+            <th>제목</th>
+            <th>작성일시</th>
+        </tr>
+        </thead>
+        <tbody>
+        <tr th:each="q, loop : ${questionList}">
+            <td>
+                <a th:text="${loop.count}" th:href="@{|/question/detail/${q.id}|}"></a>
+            </td>
+            <td>
+                <a th:href="@{|/question/detail/${q.id}|}" th:text="${q.subject}"></a>
+            </td>
+            <td th:text="${#temporals.format(q.createDate, 'yyyy-MM-dd HH:mm')}"></td>
+        </tr>
+        </tbody>
+    </table>
+</div>
