--- a/src/main/resources/templates/layout.html
+++ b/src/main/resources/templates/layout.html
@@ -3,6 +3,7 @@
 <head>
     <!-- Required meta tags -->
     <meta charset="utf-8">
+    <!-- 모바일 디바이스에서 화면이 축소되는 것을 방지 -->
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <!-- Bootstrap CSS -->
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css">
@@ -11,6 +12,15 @@
     <title>Hello, sbb!</title>
 </head>
 <body>
+
+<div class="container">
+    <h1>SB, Q&A BOARD!!</h1>
+    <ul class="d-flex" style="gap:30px">
+        <li><a href="/question/list">리스트</a></li>
+        <li><a href="/sbb">SBB! 란</a></li>
+    </ul>
+</div>
+
 <!-- 기본 템플릿 안에 삽입될 내용 Start -->
 <th:block layout:fragment="content"></th:block>
 <!-- 기본 템플릿 안에 삽입될 내용 End -->
