--- a/src/main/resources/templates/layout.html
+++ b/src/main/resources/templates/layout.html
@@ -17,6 +17,7 @@
     <h1>SB, Q&A BOARD!!</h1>
     <ul class="d-flex" style="gap:30px">
         <li><a href="/question/list">리스트</a></li>
+        <li><a href="/question/create">질문등록</a></li>
         <li><a href="/sbb">SBB! 란</a></li>
     </ul>
 </div>
