--- a/src/main/resources/templates/question_list.html
+++ b/src/main/resources/templates/question_list.html
@@ -71,11 +71,13 @@
 
     <nav th:if="${!paging.isEmpty}">
         <ul class="pagination justify-content-center">
-            <li class="page-item" th:classappend="${!paging.hasPrevious} ? 'disabled'"><a class="page-link" href="#">이전</a></li>
-            <li th:each="page: ${#numbers.sequence(0, paging.totalPages - 1)}" class="page-item">
+            <li class="page-item" th:classappend="${!paging.hasPrevious} ? 'disabled'"><a th:href="@{|?page=${paging.number - 1}|}" class="page-link" href="#">이전</a></li>
+            <li th:each="page: ${#numbers.sequence(0, paging.totalPages - 1)}" class="page-item"
+                th:if="${page >= paging.number - 5 and page <= paging.number + 5}"
+                th:classappend="${page == paging.number} ? 'active'">
                 <a th:text="${page}" class="page-link" th:href="@{|?page=${page}|}"></a>
             </li>
-            <li class="page-item" th:classappend="${!paging.hasNext} ? 'disabled'"><a class="page-link" href="#">다음</a></li>
+            <li class="page-item" th:classappend="${!paging.hasNext} ? 'disabled'"><a th:href="@{|?page=${paging.number + 1}|}" class="page-link" href="#">다음</a></li>
         </ul>
     </nav>
 
