--- a/src/main/resources/templates/question_list.html
+++ b/src/main/resources/templates/question_list.html
@@ -64,6 +64,10 @@
             </td>
             <td>
                 <a th:href="@{|/question/detail/${q.id}|}" th:text="${q.subject}"></a>
+                <span class="text-danger small ms-2"
+                      th:if="${#lists.size(q.answerList) > 0}"
+                      th:text="${#lists.size(q.answerList)}">
+                </span>
             </td>
             <td th:text="${#temporals.format(q.createDate, 'yyyy-MM-dd HH:mm')}"></td>
         </tr>
