--- a/src/main/resources/templates/question_list.html
+++ b/src/main/resources/templates/question_list.html
@@ -47,7 +47,20 @@
             </tr>
         </tbody>
     </table>
-    
+
+    <div class="row my-3">
+        <div class="col-6">
+            <a th:href="@{/question/create}" class="btn btn-primary">질문 등록하기</a>
+        </div>
+        <div class="col-6">
+            <form>
+                <div class="input-group">
+                    <input type="text" name="kw" class="form-control" placeholder="검색어" th:value="${param.kw}">
+                    <button class="btn btn-outline-secondary" id="btn_search">찾기</button>
+                </div>
+            </form>
+        </div>
+    </div>
     <table class="table">
         <thead class="table-dark">
         <tr class="text-center">
@@ -95,8 +108,6 @@
             </li>
         </ul>
     </nav>
-
-    <a th:href="@{/question/create}" class="btn btn-primary">질문 등록하기</a>
 </div>
 
 </html>
