--- a/src/main/resources/templates/question_list.html
+++ b/src/main/resources/templates/question_list.html
@@ -99,7 +99,7 @@
             <li th:each="page: ${#numbers.sequence(0, paging.totalPages - 1)}" class="page-item"
                 th:if="${page >= paging.number - 5 and page <= paging.number + 5}"
                 th:classappend="${page == paging.number} ? 'active'">
-                <a th:text="${page}" class="page-link" th:href="@{|${queryStrBase}&page=${page}|}"></a>
+                <a th:text="${page + 1}" class="page-link" th:href="@{|${queryStrBase}&page=${page}|}"></a>
             </li>
             <li class="page-item" th:classappend="${!paging.hasNext} ? 'disabled'">
                 <a th:href="@{|${queryStrBase}&page=${paging.totalPages - 1}|}" class="page-link">
